examples/test/testpolicy11286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11286
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key31: value8
      key0: value5
      key48: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value2
          key9: value7
      podSelector:
        matchLabels:
          key22: value17
          key43: value44
          key1: value11
